Fix styling issue on mobile devices for featured-content headers

--- a/layouts/default/global.scss
+++ b/layouts/default/global.scss
@@ -42,7 +42,7 @@ ul li, ol li {
 
 .border-through {
   width: 100%;
-  text-align: center;
+  // text-align: center;
   border-bottom: 2px solid #f5f5f5;
   line-height: 0.1em;
   margin: 10px 0 20px;
